--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "vue": "^3.4.15",
+    "bulma": "^0.9.4",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
@@ -22,6 +23,7 @@
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^6.1.1",
     "typescript": "~5.3.0",
+    "unplugin-vue-router": "^0.8.4",
     "vite": "^5.0.11",
     "vue-tsc": "^1.8.27"
   }
