--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "author": "Joe",
   "license": "ISC",
   "scripts": {
+    "build": "npm i -production && cd client && npm i && npm run build",
     "start": "node server/index.js",
     "dev": "nodemon server/index.js --watch server/"
     },
 
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "mongodb": "^6.5.0",
     "express": "^4.18.2",
     "dayjs": "^1.11.10"
   },
