--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@oruga-ui/oruga-next": "^0.8.9",
     "bulma": "^0.9.4",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-select": "^4.0.0-beta.6",
+    "vue-toastification": "^2.0.0-rc.5",
+    "vue3-simple-typeahead": "^1.0.11"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
@@ -30,4 +33,3 @@
     "vue-tsc": "^1.8.27"
   }
 }
-
